Add info activity add app icon upgrade gradle, kotlin migrate to androidx

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">AirdotsDoubleTap</string>
+    <string name="app_name">Mi AirDots Double Tap</string>
+    <string name="info">How to use\n1. The device will ask you with which app to complete the action\n2. Select always with <b>\"%s\"</b></string>
 </resources>
